[ ALERT_CONFIG ]
link1 = Chuck's Kofi = https://steamcommunity.com/linkfilter/?u=https://ko-fi.com/chuckleberryfinn,
link2 = Workshop = https://steamcommunity.com/id/Chuckleberry_Finn/myworkshopfiles/?appid=108600,
link3 = Github = https://steamcommunity.com/linkfilter/?u=https://github.com/Chuckleberry-Finn,
[ ------ ]

[ 7/18/25 ]
Welcome to the Last Stand!
[ ------ ]

[ 7/18/25 - hotfix ]
- Fix UI issue when Last-Stand Disabled.
- Pings to zombies come from players not the house.
[ ------ ]

[ 7/20/25]
- Fixed sandbox-panel covering options menu.
- Fixed wave announcer broadcasting to other players.
- Refactored some internal code stuffs. (Shops is empty check)
- Added server-sided updates to zombie deaths.
- Added retargeting for zombies out of bounds.
- Added safety check to spawn more zombies if needed.
- Added wallet-balance to UI.
[ ------ ]

[ 7/20/25 - Hotfix 1 ]
- Fix wallet UI loading + added background rectangle.
- Floored the number of zombies.
[ ------ ]

[ 7/21/25 ]
- Added Cooldown Multiplier and Cooldown Max Sandbox options.
- Added check for ghost/invisible/dead for spawning / attraction system.
- Added protection to spawning zombies on water.
- Tied zombie count directly to spawned Zs.
- Added shop markers system. (Shops now appear marked on the map)
- Added death log as players die.
- Raised interval for attraction on players.
[ ------ ]

[ 7/22/25 ]
- Fixed shop-marker z-axis rendering.
- Added removal of all zombies in world when mode is started.
- Made the death-log ease-out fade.
- Waves will spawn 1 extra zombie (just cause).
- Added sound for player-deaths.
[ ------ ]