@@ -8,13 +8,13 @@ option LastStandTogether.BufferSize
 
 option LastStandTogether.SetUpGracePeriod
 {
-	type = double, min = 0.0001, max = 60, default = 10,
+	type = double, min = 0.2, max = 60, default = 3,
 	page = LastStandTogether, translation = LastStandTogether_SetUpGracePeriod,
 }
 
 option LastStandTogether.CoolDownBetweenWave
 {
-	type = double, min = 0.0001, max = 60, default = 5,
+	type = double, min = 0.2, max = 60, default = 2,
 	page = LastStandTogether, translation = LastStandTogether_CoolDownBetweenWave,
 }
 
@@ -54,9 +54,15 @@ option LastStandTogether.NumberOfZombiesPerWave
 	page = LastStandTogether, translation = LastStandTogether_NumberOfZombiesPerWave,
 }
 
+option LastStandTogether.InWaveSpawnInterval
+{
+	type = double, min = 0.2, max = 60, default = 2,
+	page = LastStandTogether, translation = LastStandTogether_InWaveSpawnInterval,
+}
+
 option LastStandTogether.WavePopMultiplier
 {
-	type = double, min = 1.1, max = 9999, default = 1.5,
+	type = double, min = 1.1, max = 9999, default = 1.2,
 	page = LastStandTogether, translation = LastStandTogether_WavePopMultiplier,
 }
 
